syntax = "proto3";

package cloud.lianmi.im.wallet;
option go_package = "github.com/lianmi/servers/api/proto/wallet";

//支付宝发起预支付
message PreAlipayReq{

    //支付金额， 0.01元
    double totalAmount =1;

    //注册账号
    string username=2;

}

message PreAlipayResp{
    
    //支付订单号 
    string tradeNo=1;

    //签名信息
    string signedinfo=2;

}